@@ -1,3 +1,12 @@
+2011-02-16 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	Merged bugfix from trunk
+
+	* godmode/users/user_list.php: If user is not admin then don't 
+	display users of others groups.
+
+	Fixes: #3175670	
+
 2011-02-15 Miguel de Dios  <miguel.dedios@artica.es>
 
 	Merged bugfix from trunk
